added add to group and getmembers methods
