# doc/api.yaml
@@ -485,6 +485,23 @@ paths:
         "401": { $ref: "#/components/responses/Unauthorized" }
         "403": { $ref: "#/components/responses/Forbidden" }
         "500": { $ref: "#/components/responses/InternalServerError" }
+    get:
+      summary: list all members in a group
+      tags: ["Group"]
+      operationId: getGroupMembers
+      description: Obtain list of all members in a group
+      security:
+        - bearerAuth: []
+      responses:
+        "200":
+          description: member list obtained succesfully
+          content:
+            plain/text:
+              schema: { $ref: "#/components/schemas/ProfilesList" }
+        "400": { $ref: "#/components/responses/BadRequest" }
+        "401": { $ref: "#/components/responses/Unauthorized" }
+        "403": { $ref: "#/components/responses/Forbidden" }
+        "500": { $ref: "#/components/responses/InternalServerError" }
 
 #---------------------------COMPONENTS--------------------------#
 
