# service/api/get-group-members.go
@@ -1,0 +1,46 @@
+package api
+
+import (
+	"encoding/json"
+	"net/http"
+	"strconv"
+	"wasaText/service/api/reqcontext"
+
+	"github.com/julienschmidt/httprouter"
+)
+
+// rt.router.GET("/profiles/:userID/groups/:groupID/members", rt.wrap(rt.GetGroupMembers, true))
+func (rt *_router) GetGroupMembers(w http.ResponseWriter, r *http.Request, ps httprouter.Params, ctx reqcontext.RequestContext) {
+	userID, err := strconv.Atoi(ps.ByName("userID"))
+	if err != nil {
+		BadRequest(w, err, ctx, "Invalid userID")
+		return
+	}
+	if userID != ctx.UserId {
+		Forbidden(w, err, ctx, "Unauthorized")
+		return
+	}
+
+	groupID, err := strconv.Atoi(ps.ByName("groupID"))
+	if err != nil {
+		BadRequest(w, err, ctx, "Invalid groupID")
+		return
+	}
+
+	members, err := rt.db.GetGroupMembers(groupID)
+	if err != nil {
+		InternalServerError(w, err, ctx)
+		return
+	}
+
+	//set response header for json content
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(http.StatusOK)
+	//encode user in json
+	if err = json.NewEncoder(w).Encode(members); err != nil {
+		ctx.Logger.WithError(err).Error("Error encoding response")
+		http.Error(w, "Internal Server Error", http.StatusInternalServerError)
+		return
+	}
+
+}
